--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,17 +1,17 @@
 /* handphone */
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 576px) {
   .container-add {
     margin: 4em 0 0 0;
     width: 17em;
   }
-  .section-add #text {
+  /* .section-add #text {
     margin: 0 0.5em 0 0.5em;
   }
   .section-add .btn-task {
     width: 4.5em;
     font-size: 1rem;
     margin-right: 0.5em;
-  }
+  } */
   .container-tasks {
     width: 17em;
     padding: 0.5em 1em;
