--- a/style/responsive.css
+++ b/style/responsive.css
@@ -5,12 +5,8 @@
     width: 17em;
   }
   .section-add #text {
-    width: 17em;
-  }
-  .section-add .btn-task {
-    width: 4.5em;
-    font-size: 1rem;
-    margin-right: 0.5em;
+    width: 14.8em;
+    margin: 0 0.5em 0 0;
   }
   .container-tasks {
     width: 17em;
